<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#808080"
    tools:context=".MainActivity">
    <!--    https://www.toptal.com/designers/subtlepatterns/?s=metal-->

    <Button
        android:id="@+id/clearEntry"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#c33e50"
        android:text="CE"
        android:textColor="#f0f0f0"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@+id/guideD"
        app:layout_constraintRight_toRightOf="@+id/guideD"
        app:layout_constraintTop_toBottomOf="@+id/calcDisplay" />

    <Button
        android:id="@+id/clearDigit"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#c33e50"
        android:text="&#x232b;"
        android:textColor="#f0f0f0"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@+id/guideC"
        app:layout_constraintRight_toRightOf="@+id/guideC"
        app:layout_constraintTop_toBottomOf="@+id/calcDisplay" />

    <Button
        android:id="@+id/digit7"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="#cfc7c4"
        android:text="7"
        android:textColor="#181819"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@+id/guideA"
        app:layout_constraintRight_toRightOf="@+id/guideA"
        app:layout_constraintTop_toBottomOf="@+id/clearEntry" />

    <Button
        android:id="@+id/digit8"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="#cfc7c4"
        android:text="8"
        android:textColor="#181819"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@+id/guideB"
        app:layout_constraintRight_toRightOf="@+id/guideB"
        app:layout_constraintTop_toBottomOf="@+id/clearEntry" />

    <Button
        android:id="@+id/digit9"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="#cfc7c4"
        android:text="9"
        android:textColor="#181819"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@+id/guideC"
        app:layout_constraintRight_toRightOf="@+id/guideC"
        app:layout_constraintTop_toBottomOf="@+id/clearEntry" />

    <Button
        android:id="@+id/btnDIV"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="#2f3034"
        android:text="&#xf7;"
        android:textColor="#f0f0f0"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@+id/guideD"
        app:layout_constraintRight_toRightOf="@+id/guideD"
        app:layout_constraintTop_toBottomOf="@+id/clearEntry" />

    <Button
        android:id="@+id/digit4"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="#cfc7c4"
        android:text="4"
        android:textColor="#181819"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@+id/guideA"
        app:layout_constraintRight_toRightOf="@+id/guideA"
        app:layout_constraintTop_toBottomOf="@+id/digit7" />

    <Button
        android:id="@+id/digit5"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="#cfc7c4"
        android:text="5"
        android:textColor="#181819"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@+id/guideB"
        app:layout_constraintRight_toRightOf="@+id/guideB"
        app:layout_constraintTop_toBottomOf="@+id/digit7" />

    <Button
        android:id="@+id/digit6"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="#cfc7c4"
        android:text="6"
        android:textColor="#181819"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@+id/guideC"
        app:layout_constraintRight_toRightOf="@+id/guideC"
        app:layout_constraintTop_toBottomOf="@+id/digit7" />

    <Button
        android:id="@+id/btnMULT"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="#2f3034"
        android:text="&#xd7;"
        android:textColor="#f0f0f0"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@+id/guideD"
        app:layout_constraintRight_toRightOf="@+id/guideD"
        app:layout_constraintTop_toBottomOf="@+id/digit7" />

    <Button
        android:id="@+id/digit1"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="#cfc7c4"
        android:text="1"
        android:textColor="#181819"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@+id/guideA"
        app:layout_constraintRight_toRightOf="@+id/guideA"
        app:layout_constraintTop_toBottomOf="@+id/digit4" />

    <Button
        android:id="@+id/digit2"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="#cfc7c4"
        android:text="2"
        android:textColor="#181819"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@+id/guideB"
        app:layout_constraintRight_toRightOf="@+id/guideB"
        app:layout_constraintTop_toBottomOf="@+id/digit4" />

    <Button
        android:id="@+id/digit3"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="#cfc7c4"
        android:text="3"
        android:textColor="#181819"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@+id/guideC"
        app:layout_constraintRight_toRightOf="@+id/guideC"
        app:layout_constraintTop_toBottomOf="@+id/digit4" />

    <Button
        android:id="@+id/btnSUB"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="#2f3034"
        android:text="&#x2212;"
        android:textColor="#f0f0f0"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@+id/guideD"
        app:layout_constraintRight_toRightOf="@+id/guideD"
        app:layout_constraintTop_toBottomOf="@+id/digit4" />

    <Button
        android:id="@+id/digit0"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="#cfc7c4"
        android:text="0"
        android:textColor="#181819"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@+id/guideA"
        app:layout_constraintRight_toRightOf="@+id/guideA"
        app:layout_constraintTop_toBottomOf="@+id/digit1" />

    <Button
        android:id="@+id/btnDOT"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="#cfc7c4"
        android:text="."
        android:textColor="#181819"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@+id/guideB"
        app:layout_constraintRight_toRightOf="@+id/guideB"
        app:layout_constraintTop_toBottomOf="@+id/digit1" />

    <Button
        android:id="@+id/btnEQUAL"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="#cfc7c4"
        android:text="="
        android:textColor="#181819"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@+id/guideC"
        app:layout_constraintRight_toRightOf="@+id/guideC"
        app:layout_constraintTop_toBottomOf="@+id/digit1" />

    <Button
        android:id="@+id/btnADD"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="#2f3034"
        android:text="&#x2b;"
        android:textColor="#f0f0f0"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@+id/guideD"
        app:layout_constraintRight_toRightOf="@+id/guideD"
        app:layout_constraintTop_toBottomOf="@+id/digit1" />

    <TextView
        android:id="@+id/mem1Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"

        android:padding="2dp"
        android:text="mem1:"
        app:layout_constraintEnd_toStartOf="@id/guideB"
        app:layout_constraintTop_toBottomOf="@+id/digit0" />

    <TextView
        android:id="@+id/mem1Text"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="#b0b0b0"
        android:padding="2dp"
        android:text="0.0"
        app:layout_constraintStart_toStartOf="@id/guideB"
        app:layout_constraintTop_toBottomOf="@+id/digit0" />

    <TextView
        android:id="@+id/mem2Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"

        android:padding="2dp"
        android:text="mem2:"
        app:layout_constraintEnd_toStartOf="@id/guideB"
        app:layout_constraintTop_toBottomOf="@+id/mem1Label" />

    <TextView
        android:id="@+id/mem2Text"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="#b0b0b0"
        android:padding="2dp"
        android:text="0.0"
        app:layout_constraintStart_toStartOf="@id/guideB"
        app:layout_constraintTop_toBottomOf="@+id/mem1Label" />

    <TextView
        android:id="@+id/opLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"

        android:padding="2dp"
        android:text="op:"
        app:layout_constraintEnd_toStartOf="@id/guideB"
        app:layout_constraintTop_toBottomOf="@+id/mem2Label" />

    <TextView
        android:id="@+id/opText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="#b0b0b0"
        android:padding="2dp"
        android:text="NONE"
        app:layout_constraintStart_toStartOf="@id/guideB"
        app:layout_constraintTop_toBottomOf="@+id/mem2Label" />

    <TextView
        android:id="@+id/ansLengthLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"

        android:padding="2dp"
        android:text="ansLength:"
        app:layout_constraintEnd_toStartOf="@id/guideB"
        app:layout_constraintTop_toBottomOf="@+id/opLabel" />

    <TextView
        android:id="@+id/ansLengthText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="#b0b0b0"
        android:padding="2dp"
        android:text="NONE"
        app:layout_constraintStart_toStartOf="@id/guideB"
        app:layout_constraintTop_toBottomOf="@+id/opLabel" />

    <TextView
        android:id="@+id/calcDisplay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:background="#899e94"
        android:fontFamily="monospace"
        android:padding="4dp"
        android:text="Hello World!"

        android:textColor="#1d333a"
        android:textSize="32sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="24601" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.125" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.375" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.625" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.875" />

</androidx.constraintlayout.widget.ConstraintLayout>